# Rosetta

./: .dev.vars.example  .gitignore  AGENTS.md  README.md  Raspberry Pi Zero Battery - truemehta.pca  Technique-USNM35717_.rtf  package.json  requirements-test.txt  standard_format.json  users.csv  wrangler.jsonc  wrangler.toml
.github/: setup-labels.sh
amnh-zeiss-utils-fork/: .gitignore  README.md  REQUIREMENTS.md  amnh-zeiss-utils.yaml  get-metadata-from-txrm.py  txm-to-nrrd.py  txm-to-tiff.py  txrm-monitor.py
cloudflare/: README.md  api-setup.mjs  credentials.example.env  deploy.ps1  deploy.sh  load-credentials.ps1  load-credentials.sh  run.mjs  setup-kv.mjs  worker.js
data/: ._MTD48744.pca  AMB-13788-al 13812 head.pca  AMB-13790-body.pca  AMB-13790-head.pca  AMB13813  LSUHC-09185 body.pca  AMB13813  LSUHC-09185 head.pca  AMNH23571.pca  AMNH68124 Sglobosa.pca  A_aureoli76844.pca  A_krokosua77414.pca  A_perreti71473head.pca  A_perreti71473pelvis.pca  Abrevipes26978.pca  Aformosus75480.pca  (+172 more)
edge/: README.md  config.example.yml  pyproject.toml  requirements.txt
edge/rosetta_watchdog/: __init__.py  cli.py  config.py  identity.py  watcher.py
edge/rosetta_watchdog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
edge/rosetta_watchdog/parsers/: base.py  olefile_parser.py  pca_parser.py  xradiaPy_parser.py
edge/rosetta_watchdog/push/: github_api.py  heartbeat.py  token_provider.py  updater.py
edge/scripts/: install_service_unix.py  install_service_windows.py
edge/test_data/: example.pca
edge/tests/: test_cli.py  test_config.py
(+507 files in other folders)
